--- a/gl-physics/gl-physics.vcxproj
+++ b/gl-physics/gl-physics.vcxproj
@@ -19,16 +19,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Object.cpp" />
-    <ClCompile Include="PhysicsEngine.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Object.cpp" />
+    <ClCompile Include="src\Paraboloid.cpp" />
+    <ClCompile Include="src\PhysicsEngine.cpp" />
     <ClCompile Include="src\Sphere.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Constants.hpp" />
+    <ClInclude Include="includes\Constants.hpp" />
+    <ClInclude Include="includes\Object.h" />
+    <ClInclude Include="includes\Paraboloid.h" />
+    <ClInclude Include="includes\PhysicsEngine.h" />
     <ClInclude Include="includes\Sphere.h" />
-    <ClInclude Include="Object.h" />
-    <ClInclude Include="PhysicsEngine.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
